# extract_cci

./: .pre-commit-config.yaml  pyproject.toml  readme.md
extract_cci/: main.py
