[tool.poetry]
name = "extract_cci"
version = "0.1.0"
description = ""
authors = ["Léo Bourrel <leo.bourrel@epitech.eu>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.11"
requests = "^2.28"
tqdm = "^4.64"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
